--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
   <style>
     html, body, #map { height: 100%; margin: 0; background: #0b0d0f; }
 
+    /* On-screen status for debugging */
+    #status {
+      position: absolute; z-index: 9999; top: 10px; left: 10px;
+      background: rgba(16,20,23,0.92); color: #e8ecef;
+      border: 1px solid rgba(255,255,255,0.12);
+      border-radius: 10px; padding: 8px 10px; font: 12px/1.4 system-ui, sans-serif;
+      box-shadow: 0 8px 18px rgba(0,0,0,0.45);
+      max-width: 60vw;
+    }
+    #status b { color: #ffd66b; }
+
     /* Dark popup shell */
     .leaflet-popup-content-wrapper {
       background: #101417;
@@ -29,203 +40,139 @@
       min-width: 260px;
       max-width: 360px;
     }
-    .popup .header {
-      display: flex;
-      gap: 10px;
-      align-items: center;
-      margin: 2px 0 8px;
-    }
-    .popup .title {
-      font-weight: 700;
-      font-size: 1.05rem;
-      line-height: 1.2;
-      letter-spacing: 0.2px;
-    }
-    .popup .meta {
-      opacity: 0.9;
-      font-size: 0.9rem;
-    }
-    .popup .row {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 8px;
-      margin-top: 8px;
-      font-size: 0.9rem;
-    }
+    .popup .header { display: flex; gap: 10px; align-items: center; margin: 2px 0 8px; }
+    .popup .title { font-weight: 700; font-size: 1.05rem; line-height: 1.2; letter-spacing: 0.2px; }
+    .popup .meta { opacity: 0.9; font-size: 0.9rem; }
+    .popup .row { display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-top: 8px; font-size: 0.9rem; }
     .popup .pill {
       background: rgba(255,255,255,0.06);
       border: 1px solid rgba(255,255,255,0.08);
-      padding: 6px 10px;
-      border-radius: 999px;
-      text-align: center;
-      white-space: nowrap;
+      padding: 6px 10px; border-radius: 999px; text-align: center; white-space: nowrap;
     }
-    .popup .actions {
-      margin-top: 12px;
-      display: flex;
-      gap: 8px;
-      justify-content: flex-end;
-    }
+    .popup .actions { margin-top: 12px; display: flex; gap: 8px; justify-content: flex-end; }
     .popup .btn {
-      padding: 8px 12px;
-      border-radius: 10px;
-      border: 1px solid rgba(255,255,255,0.12);
-      background: #171c20;
-      color: #e8ecef;
-      text-decoration: none;
-      font-weight: 600;
+      padding: 8px 12px; border-radius: 10px; border: 1px solid rgba(255,255,255,0.12);
+      background: #171c20; color: #e8ecef; text-decoration: none; font-weight: 600;
     }
-    .popup .btn:hover {
-      filter: brightness(1.08);
-    }
+    .popup .btn:hover { filter: brightness(1.08); }
 
-    /* ★ Enhanced Gold Badge (WAY more readable) */
+    /* Enhanced Gold Badge */
     .badge-top100 {
-      --gold-1: #f7d776;
-      --gold-2: #dcb247;
-      --gold-3: #b9902d;
-      --gold-4: #9d7a23;
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
-      padding: 6px 10px;
-      border-radius: 999px;
+      --gold-1: #f7d776; --gold-2: #dcb247; --gold-3: #b9902d;
+      display: inline-flex; align-items: center; gap: 6px;
+      padding: 6px 10px; border-radius: 999px;
       background: linear-gradient(145deg, var(--gold-1), var(--gold-2) 55%, var(--gold-3));
-      color: #121212;
-      border: 1px solid rgba(0,0,0,0.55);
-      /* crisp edge + readable on dark: */
-      box-shadow:
-        0 0 0 1px rgba(255,255,255,0.25) inset,
-        0 2px 6px rgba(0,0,0,0.4),
-        0 0 0 2px rgba(0,0,0,0.45);
-      text-shadow: 0 1px 0 rgba(255,255,255,0.35);
-      font-weight: 800;
-      letter-spacing: 0.2px;
-      line-height: 1;
+      color: #121212; border: 1px solid rgba(0,0,0,0.55);
+      box-shadow: 0 0 0 1px rgba(255,255,255,0.25) inset, 0 2px 6px rgba(0,0,0,0.4), 0 0 0 2px rgba(0,0,0,0.45);
+      text-shadow: 0 1px 0 rgba(255,255,255,0.35); font-weight: 800; letter-spacing: 0.2px; line-height: 1;
     }
     .badge-top100 .rank {
-      font-size: 0.95rem;
-      padding: 4px 8px;
-      border-radius: 8px;
+      font-size: 0.95rem; padding: 4px 8px; border-radius: 8px;
       background: linear-gradient(145deg, rgba(255,255,255,0.55), rgba(255,255,255,0.2));
-      border: 1px solid rgba(0,0,0,0.25);
-      box-shadow: 0 0 0 1px rgba(0,0,0,0.35) inset;
+      border: 1px solid rgba(0,0,0,0.25); box-shadow: 0 0 0 1px rgba(0,0,0,0.35) inset;
     }
-    .badge-top100 .label {
-      font-size: 0.82rem;
-      font-weight: 900;
-      text-transform: uppercase;
-      letter-spacing: 0.6px;
-    }
-    .badge-top100 .icon {
-      filter: drop-shadow(0 1px 0 rgba(255,255,255,0.4));
-    }
+    .badge-top100 .label { font-size: 0.82rem; font-weight: 900; text-transform: uppercase; letter-spacing: 0.6px; }
+    .badge-top100 .icon { filter: drop-shadow(0 1px 0 rgba(255,255,255,0.4)); }
 
     /* Hover tooltips for markers */
     .ga-tooltip {
-      background: #0f1418;
-      color: #e8ecef;
-      border: 1px solid rgba(255,255,255,0.15);
-      border-radius: 8px;
-      box-shadow: 0 8px 18px rgba(0,0,0,0.45);
-      padding: 6px 8px;
-      font-weight: 700;
-      letter-spacing: 0.1px;
+      background: #0f1418; color: #e8ecef; border: 1px solid rgba(255,255,255,0.15);
+      border-radius: 8px; box-shadow: 0 8px 18px rgba(0,0,0,0.45);
+      padding: 6px 8px; font-weight: 700; letter-spacing: 0.1px;
     }
-    .ga-tooltip::before {
-      border-top-color: #0f1418 !important;
-    }
+    .ga-tooltip::before { border-top-color: #0f1418 !important; }
 
     /* Subtle marker hover scale */
-    .leaflet-marker-icon {
-      transition: transform 120ms ease, filter 120ms ease;
-      will-change: transform, filter;
-    }
-    .leaflet-marker-icon:hover {
-      transform: scale(1.06);
-      filter: drop-shadow(0 6px 12px rgba(0,0,0,0.45));
-    }
+    .leaflet-marker-icon { transition: transform 120ms ease, filter 120ms ease; will-change: transform, filter; }
+    .leaflet-marker-icon:hover { transform: scale(1.06); filter: drop-shadow(0 6px 12px rgba(0,0,0,0.45)); }
 
-    /* Cluster style (unchanged if you already customized) */
+    /* Cluster look (optional) */
     .marker-cluster-small, .marker-cluster-medium, .marker-cluster-large {
       background: radial-gradient(circle at 30% 35%, #f5f5f5, #e0e0e0);
-      border: 2px solid #2a2a2a;
-      color: #111;
-      text-shadow: 0 1px 0 rgba(255,255,255,0.65);
+      border: 2px solid #2a2a2a; color: #111; text-shadow: 0 1px 0 rgba(255,255,255,0.65);
     }
   </style>
 </head>
 <body>
   <div id="map"></div>
+  <div id="status">Loading…</div>
 
-  <!-- libs -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
   <script src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
 
   <script>
     // ===== CONFIG =====
-    const DATA_URL = "REPLACE_WITH_YOUR_CSV_URL"; // e.g., raw GitHub CSV or Wix/static URL
-    const START_VIEW = { center: [39.5, -98.5], zoom: 4 }; // lower-48 default
+    const DATA_URL = "REPLACE_WITH_YOUR_CSV_URL"; // e.g. https://raw.githubusercontent.com/.../master.csv
+    const START_VIEW = { center: [39.5, -98.5], zoom: 4 };
 
-    // Hawaii tuck-in helper: if you already do this elsewhere, you can remove
-    function hawaiiTuck(lon, lat) {
-      // No geometry warp here; we’re just leaving standard coords.
-      return [lat, lon];
-    }
+    const statusEl = document.getElementById('status');
+    function setStatus(html) { statusEl.innerHTML = html; }
+    function okStatus(html) { statusEl.innerHTML = html; statusEl.style.borderColor = "rgba(131,197,91,0.8)"; }
 
-    // Green pin with red flag (SVG) as a Leaflet Icon
+    // Gold-pin SVG
     const pinSvg = encodeURI(`
       <svg xmlns="http://www.w3.org/2000/svg" width="42" height="46" viewBox="0 0 42 46">
-        <defs>
-          <filter id="s" x="-50%" y="-50%" width="200%" height="200%">
-            <feDropShadow dx="0" dy="2" stdDeviation="2" flood-color="rgba(0,0,0,0.45)"/>
-          </filter>
+        <defs><filter id="s" x="-50%" y="-50%" width="200%" height="200%">
+          <feDropShadow dx="0" dy="2" stdDeviation="2" flood-color="rgba(0,0,0,0.45)"/></filter>
         </defs>
         <g filter="url(#s)">
           <path d="M21 1c-9.39 0-17 7.61-17 17 0 11 17 27 17 27s17-16 17-27c0-9.39-7.61-17-17-17z" fill="#1f7a3b" stroke="#0e4820" stroke-width="2"/>
           <circle cx="21" cy="18" r="8.5" fill="#e8ffe8" stroke="#0e4820" stroke-width="2"/>
-          <!-- flag pole -->
           <rect x="20.3" y="7" width="1.4" height="14" fill="#2b2b2b"/>
-          <!-- red flag -->
           <path d="M21.7 8 L33 12.5 L21.7 17 Z" fill="#c7222a" stroke="#8c141a" stroke-width="1"/>
         </g>
       </svg>
     `);
     const courseIcon = L.icon({
       iconUrl: "data:image/svg+xml;utf8," + pinSvg,
-      iconSize: [42, 46],
-      iconAnchor: [21, 42],
-      popupAnchor: [0, -40],
-      tooltipAnchor: [0, -36]
+      iconSize: [42, 46], iconAnchor: [21, 42], popupAnchor: [0, -40], tooltipAnchor: [0, -36]
     });
 
-    // Map
-    const map = L.map('map', {
-      zoomControl: true,
-      attributionControl: false
-    }).setView(START_VIEW.center, START_VIEW.zoom);
+    const map = L.map('map', { zoomControl: true, attributionControl: false })
+      .setView(START_VIEW.center, START_VIEW.zoom);
+    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", { maxZoom: 18 }).addTo(map);
 
-    // Basemap (you can swap with your custom style)
-    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
-      maxZoom: 18
-    }).addTo(map);
-
-    // Cluster group
-    const clusters = L.markerClusterGroup({
-      showCoverageOnHover: false,
-      spiderfyOnEveryZoom: false,
-      maxClusterRadius: 48
-    });
+    const clusters = L.markerClusterGroup({ showCoverageOnHover: false, spiderfyOnEveryZoom: false, maxClusterRadius: 48 });
     map.addLayer(clusters);
 
-    // Helpers
+    // -------- Helpers --------
+    function normalizeHeader(h) {
+      return String(h || "")
+        .replace(/\ufeff/g, "")     // strip BOM
+        .trim()
+        .toLowerCase()
+        .replace(/[\s\-\/]+/g, "_"); // spaces & dashes -> underscore
+    }
+
+    function normalizeRowKeys(row) {
+      const out = {};
+      Object.keys(row || {}).forEach(k => { out[normalizeHeader(k)] = row[k]; });
+      return out;
+    }
+
+    function getVal(row, keys, def="") {
+      for (const k of keys) {
+        if (row[k] !== undefined && row[k] !== null && String(row[k]).trim() !== "") return row[k];
+      }
+      return def;
+    }
+
+    function toNum(v) {
+      const n = parseFloat(v);
+      return Number.isFinite(n) ? n : NaN;
+    }
+
     function isTop100(val) {
-      if (val === null || val === undefined) return false;
-      const s = String(val).trim();
+      const s = String(val ?? "").trim();
       if (!s) return false;
       const n = Number(s);
       return Number.isFinite(n) && n >= 1 && n <= 100;
+    }
+
+    function escapeHtml(s) {
+      return String(s ?? "")
+        .replace(/&/g, "&amp;").replace(/</g, "&lt;").replace(/>/g, "&gt;");
     }
 
     function buildTop100Badge(rank) {
@@ -238,30 +185,20 @@
       `;
     }
 
-    function escapeHtml(s) {
-      return String(s || "")
-        .replace(/&/g, "&amp;")
-        .replace(/</g, "&lt;")
-        .replace(/>/g, "&gt;");
-    }
-
     function popupHtml(row) {
-      const name = escapeHtml(row.course_name);
-      const resort = escapeHtml(row.course_resort || "");
-      const city = escapeHtml(row.City || row.city || "");
-      const state = escapeHtml(row.state || "");
-      const region = escapeHtml(row.region || "");
-      const url = (row.course_url && String(row.course_url).trim()) ? String(row.course_url).trim() : null;
-      const rank = row.top_100_ranking;
+      const name   = escapeHtml(getVal(row, ["course_name","name"]));
+      const resort = escapeHtml(getVal(row, ["course_resort","resort"]));
+      const city   = escapeHtml(getVal(row, ["city","City"]));
+      const state  = escapeHtml(getVal(row, ["state"]));
+      const region = escapeHtml(getVal(row, ["region"]));
+      const url    = getVal(row, ["course_url","url"], "").toString().trim();
+      const rank   = getVal(row, ["top_100_ranking","top100","golf_digest_rank","top_100"], "");
 
       const badge = isTop100(rank) ? buildTop100Badge(rank) : "";
 
       return `
         <div class="popup">
-          <div class="header">
-            ${badge}
-            <div class="title">${name}</div>
-          </div>
+          <div class="header">${badge}<div class="title">${name}</div></div>
           <div class="meta">
             ${resort ? `${resort}<br/>` : ``}
             ${[city, state].filter(Boolean).join(", ")} ${region ? `• ${region}` : ``}
@@ -278,73 +215,74 @@
     }
 
     function makeMarker(row) {
-      const lat = parseFloat(row.latitude);
-      const lon = parseFloat(row.longitude);
+      const lat = toNum(getVal(row, ["latitude","lat","y","_lat"]));
+      const lon = toNum(getVal(row, ["longitude","lon","lng","long","x","_lng"]));
       if (!Number.isFinite(lat) || !Number.isFinite(lon)) return null;
 
-      const [adjLat, adjLon] = hawaiiTuck(lon, lat);
+      const marker = L.marker([lat, lon], { icon: courseIcon, title: getVal(row, ["course_name","name"], "") });
 
-      const marker = L.marker([adjLat, adjLon], { icon: courseIcon, title: row.course_name || "" });
-
-      // Name-on-hover tooltip
-      marker.bindTooltip(row.course_name || "", {
-        direction: "top",
-        offset: [0, -12],
-        opacity: 0.92,
-        className: "ga-tooltip"
+      marker.bindTooltip(getVal(row, ["course_name","name"], ""), {
+        direction: "top", offset: [0, -12], opacity: 0.92, className: "ga-tooltip"
       });
-
-      // Popup
       marker.bindPopup(popupHtml(row), { maxWidth: 360, minWidth: 260, closeButton: true });
-
-      // Nice hover focus
-      marker.on("mouseover", () => { marker.setZIndexOffset(1000); });
-      marker.on("mouseout",  () => { marker.setZIndexOffset(0); });
-
+      marker.on("mouseover", () => marker.setZIndexOffset(1000));
+      marker.on("mouseout",  () => marker.setZIndexOffset(0));
       return marker;
     }
 
-    // Load CSV & render
-    Papa.parse(DATA_URL, {
-      download: true,
-      header: true,
-      dynamicTyping: true,
-      skipEmptyLines: true,
-      complete: (results) => {
-        const rows = results.data || [];
-        const markers = [];
+    // -------- Load CSV --------
+    (async function load() {
+      if (!DATA_URL || DATA_URL.includes("REPLACE_WITH_YOUR_CSV_URL")) {
+        setStatus(`<b>Missing DATA_URL.</b> Update the code with your CSV link.`);
+        return;
+      }
+      setStatus(`Fetching CSV: <b>${DATA_URL}</b>`);
+      try {
+        // Quick HEAD ping to surface CORS/404 early
+        await fetch(DATA_URL, { method: "HEAD", mode: "cors" });
+      } catch (e) {
+        setStatus(`<b>Fetch problem:</b> CORS/blocked or URL not public.<br/>Put the CSV on GitHub (raw link) or Wix static file and allow public access.`);
+        console.error(e);
+        return;
+      }
 
-        rows.forEach(row => {
-          // Ensure we can read top_100_ranking whether it's numeric or string
-          if (row.top_100_ranking === undefined && row["top_100_ranking"]) {
-            row.top_100_ranking = row["top_100_ranking"];
-          }
-          const m = makeMarker(row);
-          if (m) {
-            clusters.addLayer(m);
-            markers.push(m);
-          }
-        });
+      Papa.parse(DATA_URL, {
+        download: true,
+        header: true,
+        dynamicTyping: false,   // we’ll coerce ourselves for reliability
+        skipEmptyLines: true,
+        transformHeader: (h) => normalizeHeader(h),
+        complete: (results) => {
+          const raw = results.data || [];
+          const rows = raw.map(normalizeRowKeys);
 
-        if (markers.length) {
-          const group = L.featureGroup(markers);
-          map.fitBounds(group.getBounds().pad(0.08), { animate: true });
-        } else {
-          map.setView(START_VIEW.center, START_VIEW.zoom);
+          // Log field coverage
+          const sample = rows[0] || {};
+          console.log("Headers seen:", Object.keys(sample));
+          console.log("Row count:", rows.length);
+
+          let added = 0, skipped = 0;
+          const markers = [];
+          rows.forEach((row, i) => {
+            const m = makeMarker(row);
+            if (m) { clusters.addLayer(m); markers.push(m); added++; }
+            else { skipped++; }
+          });
+
+          if (markers.length) {
+            const group = L.featureGroup(markers);
+            map.fitBounds(group.getBounds().pad(0.08), { animate: true });
+            okStatus(`Loaded <b>${rows.length}</b> rows · Plotted <b>${added}</b> · Skipped <b>${skipped}</b> (missing/invalid lat/lon)`);
+          } else {
+            setStatus(`<b>Loaded ${rows.length} rows but plotted 0.</b><br/>Check column names for lat/lon. Accepted: latitude/lat/y and longitude/lon/lng/long/x.`);
+          }
+        },
+        error: (err) => {
+          setStatus(`<b>Papa.parse error:</b> ${err?.message || err}`);
+          console.error("CSV load error:", err);
         }
-      },
-      error: (err) => {
-        console.error("CSV load error:", err);
-        alert("Error loading data. Check DATA_URL or CSV formatting.");
-      }
-    });
-
-    // Optional: keyboard nav accessibility for markers (Enter to open)
-    map.on('keypress', function(e) {
-      if (e.originalEvent.key === 'Enter' && map._lastHoverMarker) {
-        map._lastHoverMarker.openPopup();
-      }
-    });
+      });
+    })();
   </script>
 </body>
 </html>
