--- a/index.html
+++ b/index.html
@@ -1,260 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>Golf Atlas Map</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta charset="utf-8" />
+<title>Golf Atlas Map</title>
+<meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <!-- Leaflet & Cluster -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
+<!-- Leaflet + Cluster -->
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+<link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
+<link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
 
-  <style>
-    html, body, #map { height: 100%; margin: 0; background: #0b0d0f; }
+<style>
+html,body,#map{height:100%;margin:0;background:#052D1F;}
+/* Cluster “golf-ball” style */
+.marker-cluster-small,.marker-cluster-medium,.marker-cluster-large{
+  background:radial-gradient(circle at 30% 35%,#fafafa 10%,#ddd 60%,#bbb 90%);
+  border:2px solid #222;
+  border-radius:50%;
+  color:#111;
+  font-weight:700;
+  text-shadow:0 1px 0 rgba(255,255,255,0.6);
+}
+/* Popup styling */
+.leaflet-popup-content-wrapper{
+  background:#052D1F;
+  color:#f2f6f3;
+  border:1px solid rgba(255,255,255,0.08);
+  box-shadow:0 12px 28px rgba(0,0,0,0.55);
+  border-radius:16px;
+}
+.leaflet-popup-tip{background:#052D1F;}
+.popup{font-family:"Inter",-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;min-width:260px;max-width:360px;}
+.popup .header{display:flex;gap:10px;align-items:center;margin:4px 0 8px;}
+.popup .title{font-weight:700;font-size:1.05rem;line-height:1.2;}
+.popup .meta{opacity:.95;font-size:.9rem;}
+.popup .row{display:grid;grid-template-columns:1fr 1fr;gap:8px;margin-top:8px;font-size:.9rem;}
+.popup .pill{background:rgba(255,255,255,0.08);border:1px solid rgba(255,255,255,0.1);padding:6px 10px;border-radius:999px;text-align:center;white-space:nowrap;}
+.popup .actions{margin-top:12px;display:flex;justify-content:flex-end;}
+.popup .btn{padding:8px 12px;border-radius:10px;border:1px solid rgba(255,255,255,0.15);background:#083424;color:#fff;text-decoration:none;font-weight:600;}
+.popup .btn:hover{filter:brightness(1.1);}
 
-    /* Debug status (shown only if ?debug=1) */
-    #status {
-      position: absolute; z-index: 9999; top: 10px; left: 10px;
-      background: rgba(16,20,23,0.92); color: #e8ecef;
-      border: 1px solid rgba(255,255,255,0.12);
-      border-radius: 10px; padding: 8px 10px; font: 12px/1.4 system-ui, sans-serif;
-      box-shadow: 0 8px 18px rgba(0,0,0,0.45);
-      max-width: 60vw; display: none;
-    }
-    #status b { color: #ffd66b; }
+/* Gold Top-100 badge */
+.badge-top100{
+  --g1:#f7d776;--g2:#dcb247;--g3:#b9902d;
+  display:inline-flex;align-items:center;gap:6px;
+  padding:6px 10px;border-radius:999px;
+  background:linear-gradient(145deg,var(--g1),var(--g2) 55%,var(--g3));
+  color:#111;font-weight:800;letter-spacing:.2px;line-height:1;
+  box-shadow:0 0 0 1px rgba(255,255,255,.25) inset,0 2px 6px rgba(0,0,0,.4);
+}
+.badge-top100 .rank{font-size:.95rem;padding:3px 6px;border-radius:6px;background:rgba(255,255,255,.4);}
+.badge-top100 .label{font-size:.8rem;font-weight:900;text-transform:uppercase;}
 
-    /* Dark popup shell */
-    .leaflet-popup-content-wrapper {
-      background: #101417;
-      color: #e8ecef;
-      border: 1px solid rgba(255,255,255,0.08);
-      box-shadow: 0 12px 28px rgba(0,0,0,0.55), 0 0 0 1px rgba(255,255,255,0.04) inset;
-      border-radius: 16px;
-    }
-    .leaflet-popup-tip {
-      background: #101417;
-      box-shadow: 0 1px 0 rgba(255,255,255,0.06) inset;
-    }
-    .popup { font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial; min-width: 260px; max-width: 360px; }
-    .popup .header { display: flex; gap: 10px; align-items: center; margin: 2px 0 8px; }
-    .popup .title { font-weight: 700; font-size: 1.05rem; line-height: 1.2; letter-spacing: 0.2px; }
-    .popup .meta { opacity: 0.9; font-size: 0.9rem; }
-    .popup .row { display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-top: 8px; font-size: 0.9rem; }
-    .popup .pill { background: rgba(255,255,255,0.06); border: 1px solid rgba(255,255,255,0.08); padding: 6px 10px; border-radius: 999px; text-align: center; white-space: nowrap; }
-    .popup .actions { margin-top: 12px; display: flex; gap: 8px; justify-content: flex-end; }
-    .popup .btn { padding: 8px 12px; border-radius: 10px; border: 1px solid rgba(255,255,255,0.12); background: #171c20; color: #e8ecef; text-decoration: none; font-weight: 600; }
-    .popup .btn:hover { filter: brightness(1.08); }
-
-    /* Enhanced Gold Badge */
-    .badge-top100 {
-      --gold-1: #f7d776; --gold-2: #dcb247; --gold-3: #b9902d;
-      display: inline-flex; align-items: center; gap: 6px;
-      padding: 6px 10px; border-radius: 999px;
-      background: linear-gradient(145deg, var(--gold-1), var(--gold-2) 55%, var(--gold-3));
-      color: #121212; border: 1px solid rgba(0,0,0,0.55);
-      box-shadow: 0 0 0 1px rgba(255,255,255,0.25) inset, 0 2px 6px rgba(0,0,0,0.4), 0 0 0 2px rgba(0,0,0,0.45);
-      text-shadow: 0 1px 0 rgba(255,255,255,0.35);
-      font-weight: 800; letter-spacing: 0.2px; line-height: 1;
-    }
-    .badge-top100 .rank {
-      font-size: 0.95rem; padding: 4px 8px; border-radius: 8px;
-      background: linear-gradient(145deg, rgba(255,255,255,0.55), rgba(255,255,255,0.2));
-      border: 1px solid rgba(0,0,0,0.25); box-shadow: 0 0 0 1px rgba(0,0,0,0.35) inset;
-    }
-    .badge-top100 .label { font-size: 0.82rem; font-weight: 900; text-transform: uppercase; letter-spacing: 0.6px; }
-    .badge-top100 .icon { filter: drop-shadow(0 1px 0 rgba(255,255,255,0.4)); }
-
-    /* Hover tooltips for markers */
-    .ga-tooltip {
-      background: #0f1418; color: #e8ecef; border: 1px solid rgba(255,255,255,0.15);
-      border-radius: 8px; box-shadow: 0 8px 18px rgba(0,0,0,0.45);
-      padding: 6px 8px; font-weight: 700; letter-spacing: 0.1px;
-    }
-    .ga-tooltip::before { border-top-color: #0f1418 !important; }
-
-    /* Subtle marker hover scale */
-    .leaflet-marker-icon { transition: transform 120ms ease, filter 120ms ease; will-change: transform, filter; }
-    .leaflet-marker-icon:hover { transform: scale(1.06); filter: drop-shadow(0 6px 12px rgba(0,0,0,0.45)); }
-
-    /* Cluster look (optional) */
-    .marker-cluster-small, .marker-cluster-medium, .marker-cluster-large {
-      background: radial-gradient(circle at 30% 35%, #f5f5f5, #e0e0e0);
-      border: 2px solid #2a2a2a; color: #111; text-shadow: 0 1px 0 rgba(255,255,255,0.65);
-    }
-  </style>
+/* Tooltips */
+.ga-tooltip{background:#083424;color:#f1f6f3;border:1px solid rgba(255,255,255,0.15);
+border-radius:8px;box-shadow:0 8px 18px rgba(0,0,0,.45);padding:6px 8px;font-weight:700;}
+.leaflet-marker-icon{transition:transform .12s ease,filter .12s ease;}
+.leaflet-marker-icon:hover{transform:scale(1.06);filter:drop-shadow(0 6px 12px rgba(0,0,0,.45));}
+</style>
 </head>
 <body>
-  <div id="map"></div>
-  <div id="status">Loading…</div>
+<div id="map"></div>
 
-  <!-- libs -->
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
-  <script src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
+<script src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
 
-  <script>
-    // ===== CONFIG =====
-    const START_VIEW = { center: [39.5, -98.5], zoom: 4 };
+<script>
+// ===== CONFIG =====
+const params=new URLSearchParams(window.location.search);
+const CSV_URL=params.get("csv")||"https://docs.google.com/spreadsheets/d/e/2PACX-1vT-nZvG7m9sUkOu0spxVTVGcM311qlgGSjnFgRDQr-l6nfs1cPFNrGBXO0ZDzMIQg/pub?gid=1171293634&single=true&output=csv";
+const START_VIEW={center:[39.5,-98.5],zoom:4};
 
-    // URL params: ?csv=<url-encoded csv url>&debug=1
-    const params = new URLSearchParams(window.location.search);
-    const PARAM_CSV = params.get("csv");
-    const PARAM_DEBUG = params.get("debug");
+// --- Map base ---
+const map=L.map("map",{zoomControl:true,attributionControl:false}).setView(START_VIEW.center,START_VIEW.zoom);
+L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",{maxZoom:18}).addTo(map);
 
-    // Default fallback (keeps your old sheet as a backup if no ?csv provided)
-    const DEFAULT_CSV = "https://docs.google.com/spreadsheets/d/e/2PACX-1vT-nZvG7m9sUkOu0spxVTVGcM311qlgGSjnFgRDQr-l6nfs1cPFNrGBXO0ZDzMIQg/pub?gid=1171293634&single=true&output=csv";
-    const DATA_URL = PARAM_CSV || DEFAULT_CSV;
+// --- Cluster group (golf ball style) ---
+const clusters=L.markerClusterGroup({
+  iconCreateFunction:function(cluster){
+    const count=cluster.getChildCount();
+    const size=count<10?"small":count<50?"medium":"large";
+    return L.divIcon({html:`<div><span>${count}</span></div>`,className:`marker-cluster marker-cluster-${size}`,iconSize:L.point(40,40)});
+  },
+  showCoverageOnHover:false,maxClusterRadius:45
+});
+map.addLayer(clusters);
 
-    const statusEl = document.getElementById('status');
-    if (PARAM_DEBUG === "1") statusEl.style.display = "block";
-    function setStatus(html) { if (PARAM_DEBUG === "1") statusEl.innerHTML = html; }
-    function okStatus(html)  { if (PARAM_DEBUG === "1") { statusEl.innerHTML = html; statusEl.style.borderColor = "rgba(131,197,91,0.8)"; } }
+// --- Marker icon (green pin + flag) ---
+const pinSvg=encodeURI(`
+<svg xmlns="http://www.w3.org/2000/svg" width="42" height="46" viewBox="0 0 42 46">
+<path d="M21 1c-9.4 0-17 7.6-17 17 0 11 17 27 17 27s17-16 17-27c0-9.4-7.6-17-17-17z" fill="#1f7a3b" stroke="#0e4820" stroke-width="2"/>
+<circle cx="21" cy="18" r="8.5" fill="#e8ffe8" stroke="#0e4820" stroke-width="2"/>
+<rect x="20.3" y="7" width="1.4" height="14" fill="#2b2b2b"/>
+<path d="M21.7 8 L33 12.5 L21.7 17 Z" fill="#c7222a" stroke="#8c141a" stroke-width="1"/>
+</svg>`);
+const courseIcon=L.icon({iconUrl:"data:image/svg+xml;utf8,"+pinSvg,iconSize:[42,46],iconAnchor:[21,42],popupAnchor:[0,-40],tooltipAnchor:[0,-36]});
 
-    // Map
-    const map = L.map('map', { zoomControl: true, attributionControl: false }).setView(START_VIEW.center, START_VIEW.zoom);
-    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", { maxZoom: 18 }).addTo(map);
+// --- Helpers ---
+const escapeHtml=s=>String(s??"").replace(/&/g,"&amp;").replace(/</g,"&lt;").replace(/>/g,"&gt;");
+const toNum=v=>Number.isFinite(+v)?+v:NaN;
+const isTop100=v=>Number.isFinite(+v)&&v>0&&v<=100;
 
-    // Cluster group
-    const clusters = L.markerClusterGroup({ showCoverageOnHover: false, spiderfyOnEveryZoom: false, maxClusterRadius: 48 });
-    map.addLayer(clusters);
+function buildBadge(rank){return `<div class="badge-top100"><span class="label">Top&nbsp;100</span><span class="rank">#${rank}</span></div>`;}
 
-    // Green pin with red flag (SVG)
-    const pinSvg = encodeURI(`
-      <svg xmlns="http://www.w3.org/2000/svg" width="42" height="46" viewBox="0 0 42 46">
-        <defs><filter id="s" x="-50%" y="-50%" width="200%" height="200%">
-          <feDropShadow dx="0" dy="2" stdDeviation="2" flood-color="rgba(0,0,0,0.45)"/></filter>
-        </defs>
-        <g filter="url(#s)">
-          <path d="M21 1c-9.39 0-17 7.61-17 17 0 11 17 27 17 27s17-16 17-27c0-9.39-7.61-17-17-17z" fill="#1f7a3b" stroke="#0e4820" stroke-width="2"/>
-          <circle cx="21" cy="18" r="8.5" fill="#e8ffe8" stroke="#0e4820" stroke-width="2"/>
-          <rect x="20.3" y="7" width="1.4" height="14" fill="#2b2b2b"/>
-          <path d="M21.7 8 L33 12.5 L21.7 17 Z" fill="#c7222a" stroke="#8c141a" stroke-width="1"/>
-        </g>
-      </svg>
-    `);
-    const courseIcon = L.icon({
-      iconUrl: "data:image/svg+xml;utf8," + pinSvg,
-      iconSize: [42, 46], iconAnchor: [21, 42], popupAnchor: [0, -40], tooltipAnchor: [0, -36]
-    });
+function popupHtml(r){
+ const name=escapeHtml(r["course_name"]);
+ const resort=escapeHtml(r["course_resort"]);
+ const fees=escapeHtml(r["cost_per_course(green_fee_range)"]);
+ const property=escapeHtml(r["#_of_courses_on_property"]);
+ const lodging=escapeHtml(r["lodging_on-site(yes_no)"]);
+ const rank=r["top_100_ranking"];
+ const badge=isTop100(rank)?buildBadge(rank):"";
+ return `
+ <div class="popup">
+   <div class="header">${badge}<div class="title">${name}</div></div>
+   <div class="meta">${resort?`${resort}<br>`:""}</div>
+   <div class="row">
+     ${fees?`<div class="pill">Fees: ${fees}</div>`:""}
+     ${property?`<div class="pill">${property} Courses</div>`:""}
+   </div>
+   <div class="row">
+     ${lodging?`<div class="pill">Lodging: ${lodging}</div>`:""}
+     ${isTop100(rank)?`<div class="pill">Rank #${rank}</div>`:""}
+   </div>
+   <div class="actions"><a class="btn" href="https://www.google.com/search?q=${encodeURIComponent(name)}+golf" target="_blank">View Course ↗</a></div>
+ </div>`;
+}
 
-    // Helpers
-    function normalizeHeader(h) {
-      return String(h || "").replace(/\ufeff/g, "").trim().toLowerCase().replace(/[\s\-\/]+/g, "_");
-    }
-    function normalizeRowKeys(row) {
-      const out = {};
-      Object.keys(row || {}).forEach(k => { out[normalizeHeader(k)] = row[k]; });
-      return out;
-    }
-    function getVal(row, keys, def="") {
-      for (const k of keys) {
-        if (row[k] !== undefined && row[k] !== null && String(row[k]).trim() !== "") return row[k];
-      }
-      return def;
-    }
-    function toNum(v) { const n = parseFloat(v); return Number.isFinite(n) ? n : NaN; }
-    function isTop100(val) {
-      const s = String(val ?? "").trim(); if (!s) return false;
-      const n = Number(s); return Number.isFinite(n) && n >= 1 && n <= 100;
-    }
-    function escapeHtml(s) { return String(s ?? "").replace(/&/g,"&amp;").replace(/</g,"&lt;").replace(/>/g,"&gt;"); }
-    function buildTop100Badge(rank) {
-      return `
-        <div class="badge-top100" title="Golf Digest Top 100">
-          <span class="icon">🏆</span>
-          <span class="label">Top&nbsp;100</span>
-          <span class="rank">#${rank}</span>
-        </div>
-      `;
-    }
-    function popupHtml(row) {
-      const name   = escapeHtml(getVal(row, ["course_name","name"]));
-      const resort = escapeHtml(getVal(row, ["course_resort","resort"]));
-      const city   = escapeHtml(getVal(row, ["city","City"]));
-      const state  = escapeHtml(getVal(row, ["state"]));
-      const region = escapeHtml(getVal(row, ["region"]));
-      const url    = getVal(row, ["course_url","url"], "").toString().trim();
-      const rank   = getVal(row, ["top_100_ranking","top100","golf_digest_rank","top_100"], "");
+function makeMarker(r){
+ const lat=toNum(r.latitude),lon=toNum(r.longitude);
+ if(!Number.isFinite(lat)||!Number.isFinite(lon))return null;
+ const m=L.marker([lat,lon],{icon:courseIcon,title:r["course_name"]});
+ m.bindTooltip(r["course_name"],{direction:"top",offset:[0,-12],opacity:0.9,className:"ga-tooltip"});
+ m.bindPopup(popupHtml(r),{maxWidth:360,minWidth:260});
+ return m;
+}
 
-      const badge = isTop100(rank) ? buildTop100Badge(rank) : "";
-
-      return `
-        <div class="popup">
-          <div class="header">${badge}<div class="title">${name}</div></div>
-          <div class="meta">
-            ${resort ? `${resort}<br/>` : ``}
-            ${[city, state].filter(Boolean).join(", ")} ${region ? `• ${region}` : ``}
-          </div>
-          <div class="row">
-            ${isTop100(rank) ? `<div class="pill">Ranked: #${rank}</div>` : `<div class="pill">Not Ranked</div>`}
-            ${resort ? `<div class="pill">Resort</div>` : `<div class="pill">Public</div>`}
-          </div>
-          <div class="actions">
-            ${url ? `<a class="btn" href="${url}" target="_blank" rel="noopener">Course Page ↗</a>` : ``}
-          </div>
-        </div>
-      `;
-    }
-    function makeMarker(row) {
-      const lat = toNum(getVal(row, ["latitude","lat","y","_lat"]));
-      const lon = toNum(getVal(row, ["longitude","lon","lng","long","x","_lng"]));
-      if (!Number.isFinite(lat) || !Number.isFinite(lon)) return null;
-
-      const marker = L.marker([lat, lon], { icon: courseIcon, title: getVal(row, ["course_name","name"], "") });
-      // Name-on-hover tooltip
-      marker.bindTooltip(getVal(row, ["course_name","name"], ""), { direction: "top", offset: [0, -12], opacity: 0.92, className: "ga-tooltip" });
-      // Popup
-      marker.bindPopup(popupHtml(row), { maxWidth: 360, minWidth: 260, closeButton: true });
-      marker.on("mouseover", () => marker.setZIndexOffset(1000));
-      marker.on("mouseout",  () => marker.setZIndexOffset(0));
-      return marker;
-    }
-
-    // Load CSV & render
-    (async function load() {
-      if (!DATA_URL) {
-        setStatus(`<b>Missing CSV URL.</b> Pass it like ?csv=https%3A%2F%2F...%2Foutput%3Dcsv`);
-        return;
-      }
-      setStatus(`Fetching CSV: <b>${DATA_URL}</b>`);
-      Papa.parse(DATA_URL, {
-        download: true,
-        header: true,
-        dynamicTyping: false,
-        skipEmptyLines: true,
-        transformHeader: (h) => normalizeHeader(h),
-        complete: (results) => {
-          const raw = results.data || [];
-          const rows = raw.map(normalizeRowKeys);
-
-          if (PARAM_DEBUG === "1") {
-            console.log("First row headers:", Object.keys(rows[0] || {}));
-            console.log("Row count:", rows.length);
-          }
-
-          let added = 0, skipped = 0;
-          const markers = [];
-          rows.forEach(row => {
-            const m = makeMarker(row);
-            if (m) { clusters.addLayer(m); markers.push(m); added++; }
-            else { skipped++; }
-          });
-
-          if (markers.length) {
-            const group = L.featureGroup(markers);
-            map.fitBounds(group.getBounds().pad(0.08), { animate: true });
-            okStatus(`Loaded <b>${rows.length}</b> rows · Plotted <b>${added}</b> · Skipped <b>${skipped}</b> (missing/invalid lat/lon)`);
-          } else {
-            setStatus(`<b>Loaded ${rows.length} rows but plotted 0.</b><br/>Check lat/lon columns. Accepted: latitude/lat/y and longitude/lon/lng/long/x.`);
-          }
-        },
-        error: (err) => {
-          setStatus(`<b>Papa.parse error:</b> ${err?.message || err}`);
-          if (PARAM_DEBUG === "1") console.error("CSV load error:", err);
-        }
-      });
-    })();
-  </script>
+// --- Load CSV ---
+Papa.parse(CSV_URL,{download:true,header:true,skipEmptyLines:true,
+ complete:res=>{
+  const rows=res.data||[];let added=0;const markers=[];
+  rows.forEach(r=>{const m=makeMarker(r);if(m){clusters.addLayer(m);markers.push(m);added++;}});
+  if(markers.length){const g=L.featureGroup(markers);map.fitBounds(g.getBounds().pad(0.08));}
+  console.log(`Loaded ${rows.length} · plotted ${added}`);
+ }});
+</script>
 </body>
 </html>
